test/good/24.cc
int main()
{
    int x = 10;
}

double thing()
{
    {

    }
    {
        return 4.2252;
    }
    return 0.0;
}
